--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "smartdiys",
   "description": "support machine",
   "dependencies": {
+    "coffee-script": "^1.12.7",
+    "cron": "^1.4.0",
     "hubot": "^3.1.1",
     "hubot-chatwork": "^0.3.0",
     "hubot-diagnostics": "^1.0.0",
