--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coffee-script": "^1.12.7",
     "cron": "^1.4.0",
     "hubot": "^3.1.1",
-    "hubot-chatwork": "^0.3.0",
+    "hubot-chatwork": "git+https://github.com/yashiKeisuke/hubot-chatwork#master",
     "hubot-diagnostics": "^1.0.0",
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
